MESSAGE("Generating Makefile for Engine")

SET(SHADER_OUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Precompiled/")
ADD_SUBDIRECTORY(Shaders)

FILE(GLOB ENG_SOURCES    *.cpp)
FILE(GLOB ENG_HEADERS    *.hpp)
FILE(GLOB IMGUI_SOURCES  ${EXTERNAL_DIR}/ImGUI/*.cpp)
FILE(GLOB IMGUI_HEADERS  ${EXTERNAL_DIR}/ImGUI/*.h)
FILE(GLOB UTILS_SOURCES  Utils/*.cpp)
FILE(GLOB UTILS_HEADERS  Utils/*.hpp)
FILE(GLOB PIXEL_SHADERS  Shaders/*PS.hlsl)
FILE(GLOB VERTEX_SHADERS Shaders/*VS.hlsl)

SOURCE_GROUP("Header Files" FILES ${ENG_HEADERS})
SOURCE_GROUP("Header Files\\ImGUI" FILES ${IMGUI_HEADERS})
SOURCE_GROUP("Header Files\\Shaders" FILES ${PIXEL_SHADERS} ${VERTEX_SHADERS})
SOURCE_GROUP("Header Files\\Utils" FILES ${UTILS_HEADERS})

SOURCE_GROUP("Source Files" FILES ${ENG_SOURCES})
SOURCE_GROUP("Source Files\\ImGUI" FILES ${IMGUI_SOURCES})
SOURCE_GROUP("Source Files\\Utils" FILES ${UTILS_SOURCES})

ADD_EXECUTABLE(${PROJECT_NAME} ${ENG_SOURCES} ${ENG_HEADERS}
                      ${IMGUI_SOURCES} ${IMGUI_HEADERS}
                      ${UTILS_SOURCES} ${UTILS_HEADERS}
)
ADD_DEPENDENCIES(${PROJECT_NAME} precompiled_shaders)
SET_PROPERTY(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} CONAN_PKG::libpng model_obj)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${EXTERNAL_DIR} ${SRC_DIR} ${SHADER_OUT_DIR})