MESSAGE("Generating Makefile for shaders precompilation")

FILE(GLOB PIXEL_SHADERS  *PS.hlsl)
FILE(GLOB VERTEX_SHADERS *VS.hlsl)

SET_SOURCE_FILES_PROPERTIES(${PIXEL_SHADERS} PROPERTIES VS_SHADER_TYPE Pixel)
SET_SOURCE_FILES_PROPERTIES(${VERTEX_SHADERS} PROPERTIES VS_SHADER_TYPE Vertex)
SET_SOURCE_FILES_PROPERTIES(${PIXEL_SHADERS} ${VERTEX_SHADERS} PROPERTIES
	VS_SHADER_ENTRYPOINT main
	VS_SHADER_MODEL 5.0
	VS_SHADER_OUTPUT_HEADER_FILE "${SHADER_OUT_DIR}%(Filename).hpp"
	VS_SHADER_OBJECT_FILE_NAME "${SHADER_OUT_DIR}%(Filename).cso"
	VS_SHADER_VARIABLE_NAME "g%(Filename)Array"
)

ADD_EXECUTABLE(precompiled_shaders ${PIXEL_SHADERS} ${VERTEX_SHADERS})
SET_TARGET_PROPERTIES(precompiled_shaders PROPERTIES LINKER_LANGUAGE CXX)
